Fix T46604: Crash in ChainPredicateIterator instantiated without predicates.

Also fixed a potential crash in the copy constructor case.